<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allhomes.poc.activities.MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/modeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/modeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/modes"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/states"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/suburbTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suburb"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/suburbSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/suburbs"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postcodeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postcode"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/postCodeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/postcodes"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="60dp"/>

</LinearLayout>
